# mtw.github.io

./: .gitignore  AGENTS.md  CLAUDE.md  CNAME  README.md  README.rst  _config.yml  atom.xml  index.html  pyproject.toml  pytest.ini  robots.txt  sitemap.xml
.github/: dependabot.yml
Pelican/: Makefile  README.md  XFILE  make.sh  pelicanconf.py  publishconf.py  requirements.txt  tasks.py
about/: index.html
blog/: index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html
categories/: index.html
consulting/: index.html
contact/: index.html
feeds/: all.atom.xml
index/: index.html
legal/: index.html
publications/: index.html  posters.html  presentations.html
research/: index.html
scripts/: build_publish.py  cleanup.sh  optimize_publish.py
services/: index.html
static/: m-components.css  m-dark.css  m-light.compiled.css  m-light.compiled.min.css  m-light.css  m-mtw.css  m-mtw.min.css  m-theme-dark.css  m-theme-light.css  postprocess.py  postprocess.sh
stylesheets/: screen.css
tag/: 3d.html  3d2.html  ai.html  bacteria.html  energy-landscapes.html  ngs.html  non-coding-rna.html  non-coding-rna2.html  one-health.html  one-health2.html  one-health3.html  rna-design.html  rna-kinetics.html  rna-protein-interaction.html  rna-rna-interaction.html  shape.html  viennarna.html  virus.html  viruses.html  viruses2.html  viruses3.html  xrrna.html
teaching/: index.html
team/: index.html
tests/: __init__.py  site_test_utils.py  test_internal_links.py  test_publications_links.py  test_publish_asset_optimization.py  (+1 more)
(+297 files in other folders)
